# QBit

./: .gitmodules  .travis.yml  CMakeLists.txt  Changelog  INSTALL.md  README.md  appveyor.yml  files.qrc
.github/workflows/: ccpp.yml
libpeakpick/: analyse.h  deconvulate.h  math.h  mathhelper.h  peakpick.h  spectrum.h
scripts/: build_macOS_github.sh  build_unix.sh  build_windows.bat  build_windows.cmd  deploy_unix_dir.sh
src/: main.cpp
src/core/: filehandler.cpp  filehandler.h  nmrspec.cpp  nmrspec.h
src/func/: fit_threaded.cpp  fit_threaded.h  pick_threaded.cpp  pick_threaded.h
src/gui/: chartview.h  multispecwidget.cpp  multispecwidget.h  qbit.cpp  qbit.h  selectguess.h
src/gui/dialogs/: fitparameter.cpp  fitparameter.h  selectguess.cpp  selectguess.h
src/gui/helpers/: helpers.h
src/gui/widgets/: chartview.cpp  chartview.h  fileswidget.cpp  fileswidget.h  glfitlist.cpp  glfitlist.h  glfitwidget.cpp  glfitwidget.h  logwidget.cpp  logwidget.h  multispecwidget.cpp  multispecwidget.h  peakcallout.cpp  peakcallout.h  peakposcallout.cpp  peakposcallout.h  peakwidget.cpp  peakwidget.h
travis/: install_charts.sh
